--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="generic.html">Generic</a></li>
+					<li><a class='dropdown-arrow' href="#">Products</a>
+						<ul class='sub-menus'>
+						  <li><a href="#">Products Sub Menu 1</a></li>
+						  <li><a href="#">Products Sub Menu 2</a></li>
+
+						</ul>
+					  </li>
 					<li><a href="elements.html">Elements</a></li>
 				</ul>
 			</nav>
@@ -31,7 +37,7 @@
 		<!-- Banner -->
 			<section class="banner full">
 				<article>
-					<img src="images/slide01.jpg" alt="" />
+					<img src="images/genshin1.png" alt="" />
 					<div class="inner">
 						<header>
 							<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
@@ -41,7 +47,7 @@
 				</article>
 
 				<article>
-					<img src="images/slide01.jpg" alt="" />
+					<img src="images/genshin2.jpg" alt="" />
 					<div class="inner">
 						<header>
 							<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
@@ -51,7 +57,7 @@
 				</article>
 				
 				<article>
-					<img src="images/slide02.jpg" alt="" />
+					<img src="images/genshin3.jpg" alt="" />
 					<div class="inner">
 						<header>
 							<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
@@ -60,7 +66,7 @@
 					</div>
 				</article>
 				<article>
-					<img src="images/slide03.jpg"  alt="" />
+					<img src="images/genshin4.jpg"  alt="" />
 					<div class="inner">
 						<header>
 							<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
@@ -69,7 +75,7 @@
 					</div>
 				</article>
 				<article>
-					<img src="images/slide04.jpg"  alt="" />
+					<img src="images/genshin5.jpg"  alt="" />
 					<div class="inner">
 						<header>
 							<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
@@ -78,7 +84,7 @@
 					</div>
 				</article>
 				<article>
-					<img src="images/slide05.jpg"  alt="" />
+					<img src="images/genshin6.jpg"  alt="" />
 					<div class="inner">
 						<header>
 							<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
@@ -90,6 +96,10 @@
 
 		<!-- One -->
 			<section id="one" class="wrapper style2">
+				<header class="align-center">
+					<p class="special">Nam vel ante sit amet libero scelerisque facilisis eleifend vitae urna</p>
+					<h2>Morbi maximus justo</h2>
+				</header>
 				<div class="inner">
 					<div class="grid-style">
 
@@ -222,14 +232,14 @@
 			</section>
 
 		<!-- Two -->
-			<section id="two" class="wrapper style3">
+			<!-- <section id="two" class="wrapper style3">
 				<div class="inner">
 					<header class="align-center">
 						<p>Nam vel ante sit amet libero scelerisque facilisis eleifend vitae urna</p>
 						<h2>Morbi maximus justo</h2>
 					</header>
 				</div>
-			</section>
+			</section> -->
 
 		<!-- Three -->
 			<section id="three" class="wrapper style2">
@@ -269,9 +279,9 @@
 				<div class="container">
 					<ul class="icons">
 						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+						<li><a href="#" class="icon fa-youtube-play"><span class="label">youtube</span></a></li>
+						<li><a href="#" class="icon fa-twitch"><span class="label">twitch</span></a></li>
 					</ul>
 				</div>
 				<div class="copyright">
@@ -285,6 +295,6 @@
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-
+			<script src="assets/js/munu.js"></script>
 	</body>
 </html>
