--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 		<!-- Header -->
 			<header id="header" class="alt">
-				<div class="logo"><a href="index.html">IceSakura <span>Webpage</span></a></div>
+				<div class="logo"><a href="index.html">IceSakura <span>Game Wiki</span></a></div>
 				<a href="#menu">Menu</a>
 			</header>
 
@@ -23,25 +23,24 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a class='dropdown-arrow' href="#">Products</a>
+					<li><a class='dropdown-arrow' href="#">Genshin Impact</a>
 						<ul class='sub-menus'>
-						  <li><a href="#">Products Sub Menu 1</a></li>
-						  <li><a href="#">Products Sub Menu 2</a></li>
-
+						  <li><a href="#">- Introduction</a></li>
+						  <li><a href="#">-Guides</a></li>
 						</ul>
 					  </li>
-					<li><a href="elements.html">Elements</a></li>
+					<li><a href="elements.html">Contact</a></li>
 				</ul>
 			</nav>
 
 		<!-- Banner -->
 			<section class="banner full">
 				<article>
-					<img src="images/genshin1.png" alt="" />
+					<img src="images/genshin1.jpg" alt="" />
 					<div class="inner">
 						<header>
 							<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
-							<h2>Welcome to </br>IceSakura Game Wiki</h2>
+							<h2 class="text-size">Welcome to </br>IceSakura Game Wiki</h2>
 						</header>
 					</div>
 				</article>
@@ -55,7 +54,7 @@
 						</header>
 					</div>
 				</article>
-				
+
 				<article>
 					<img src="images/genshin3.jpg" alt="" />
 					<div class="inner">
@@ -65,8 +64,29 @@
 						</header>
 					</div>
 				</article>
+
 				<article>
-					<img src="images/genshin4.jpg"  alt="" />
+					<img src="images/genshin4.jpg" alt="" />
+					<div class="inner">
+						<header>
+							<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
+							<h2>Welcome to </br>IceSakura Game Wiki</h2>
+						</header>
+					</div>
+				</article>
+
+				<article>
+					<img src="images/genshin5.jpg" alt="" />
+					<div class="inner">
+						<header>
+							<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
+							<h2>Welcome to </br>IceSakura Game Wiki</h2>
+						</header>
+					</div>
+				</article>
+				
+				<article>
+					<img src="images/genshin6.jpg" alt="" />
 					<div class="inner">
 						<header>
 							<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
@@ -75,7 +95,7 @@
 					</div>
 				</article>
 				<article>
-					<img src="images/genshin5.jpg"  alt="" />
+					<img src="images/genshin7.jpg"  alt="" />
 					<div class="inner">
 						<header>
 							<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
@@ -84,7 +104,17 @@
 					</div>
 				</article>
 				<article>
-					<img src="images/genshin6.jpg"  alt="" />
+					<img src="images/genshin8.jpg"  alt="" />
+					<div class="inner">
+						<header>
+							<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
+							<h2 class="span">Welcome to </br>IceSakura Game Wiki</h2>
+						</header>
+					</div>
+				</article>
+
+				<article>
+					<img src="images/genshin9.jpg"  alt="" />
 					<div class="inner">
 						<header>
 							<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
@@ -92,13 +122,35 @@
 						</header>
 					</div>
 				</article>
-			</section>
+		
+
+			<article>
+				<img src="images/genshin10.jpg"  alt="" />
+				<div class="inner">
+					<header>
+						<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
+						<h2>Welcome to </br>IceSakura Game Wiki</h2>
+					</header>
+				</div>
+			</article>
+	
+
+		<article>
+			<img src="images/genshin11.jpg"  alt="" />
+			<div class="inner">
+				<header>
+					<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
+					<h2>Welcome to </br>IceSakura Game Wiki</h2>
+				</header>
+			</div>
+		</article>
+	</section>
 
 		<!-- One -->
 			<section id="one" class="wrapper style2">
 				<header class="align-center">
-					<p class="special">Nam vel ante sit amet libero scelerisque facilisis eleifend vitae urna</p>
-					<h2>Morbi maximus justo</h2>
+					<p class="special">IceSakura Game Wiki</p>
+					<h2 class="special2">Articles </h2>
 				</header>
 				<div class="inner">
 					<div class="grid-style">
@@ -106,7 +158,7 @@
 						<div>
 							<div class="box">
 								<div class="image fit">
-									<img src="images/pic02.jpg" alt="" />
+									<img src="images/genshin2.jpg" alt="" />
 								</div>
 								<div class="content">
 									<header class="align-center">
@@ -124,7 +176,7 @@
 						<div>
 							<div class="box">
 								<div class="image fit">
-									<img src="images/pic03.jpg" alt="" />
+									<img src="images/genshin3.jpg" alt="" />
 								</div>
 								<div class="content">
 									<header class="align-center">
@@ -150,7 +202,7 @@
 						<div>
 							<div class="box">
 								<div class="image fit">
-									<img src="images/pic02.jpg" alt="" />
+									<img src="images/genshin4.jpg" alt="" />
 								</div>
 								<div class="content">
 									<header class="align-center">
@@ -168,7 +220,7 @@
 						<div>
 							<div class="box">
 								<div class="image fit">
-									<img src="images/pic03.jpg" alt="" />
+									<img src="images/genshin5.jpg" alt="" />
 								</div>
 								<div class="content">
 									<header class="align-center">
@@ -194,7 +246,7 @@
 						<div>
 							<div class="box">
 								<div class="image fit">
-									<img src="images/pic02.jpg" alt="" />
+									<img src="images/genshin6.jpg" alt="" />
 								</div>
 								<div class="content">
 									<header class="align-center">
@@ -212,7 +264,7 @@
 						<div>
 							<div class="box">
 								<div class="image fit">
-									<img src="images/pic03.jpg" alt="" />
+									<img src="images/genshin7.jpg" alt="" />
 								</div>
 								<div class="content">
 									<header class="align-center">
@@ -245,28 +297,41 @@
 			<section id="three" class="wrapper style2">
 				<div class="inner">
 					<header class="align-center">
-						<p class="special">Nam vel ante sit amet libero scelerisque facilisis eleifend vitae urna</p>
-						<h2>Morbi maximus justo</h2>
+						<p class="special">IceSakura Game Wiki</p>
+						<h2 class="special2">Character Guide</h2>
 					</header>
 					<div class="gallery">
 						<div>
 							<div class="image fit">
-								<a href="#"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#"><img src="images/genshin8.jpg" alt="" /></a>
+							</div>
+						</div>
+
+						<div>
+							<div class="image fit">
+								<a href="#"><img src="images/genshin9.jpg" alt="" /></a>
+							</div>
+						</div>
+
+						<div>
+							<div class="image fit">
+								<a href="#"><img src="images/genshin10.jpg" alt="" /></a>
+							</div>
+						</div>
+
+						<div>
+							<div class="image fit">
+								<a href="#"><img src="images/genshin11.jpg" alt="" /></a>
 							</div>
 						</div>
 						<div>
 							<div class="image fit">
-								<a href="#"><img src="images/pic02.jpg" alt="" /></a>
+								<a href="#"><img src="images/genshin1.jpg" alt="" /></a>
 							</div>
 						</div>
 						<div>
 							<div class="image fit">
-								<a href="#"><img src="images/pic03.jpg" alt="" /></a>
-							</div>
-						</div>
-						<div>
-							<div class="image fit">
-								<a href="#"><img src="images/pic04.jpg" alt="" /></a>
+								<a href="#"><img src="images/genshin2.jpg" alt="" /></a>
 							</div>
 						</div>
 					</div>
@@ -287,6 +352,8 @@
 				<div class="copyright">
 					&copy; Untitled. All rights reserved.
 				</div>
+				<div class="copyright">
+				<p> In Development</p>
 			</footer>
 
 		<!-- Scripts -->
