--- a/generic.html
+++ b/generic.html
@@ -29,14 +29,14 @@
 			</nav>
 
 		<!-- One -->
-			<section id="One" class="wrapper style3">
+			<!-- <section id="One" class="wrapper style3">
 				<div class="inner">
 					<header class="align-center">
 						<p>Eleifend vitae urna</p>
 						<h2>Generic Page Template</h2>
 					</header>
 				</div>
-			</section>
+			</section> -->
 
 		<!-- Two -->
 			<section id="two" class="wrapper style2">
@@ -70,6 +70,8 @@
 				<div class="copyright">
 					&copy; Untitled. All rights reserved.
 				</div>
+				<div class="copyright">
+						<p> In Development</p>
 			</footer>
 
 		<!-- Scripts -->
