--- a/introduction.html
+++ b/introduction.html
@@ -9,7 +9,7 @@
 		<title>IceSakura Webpage</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main.css" />	
+		<link rel="stylesheet" href="assets/css/main_subpage.css" />
 		<link rel="icon" href="images/favicon.png" type="image" sizes="16x16"> 
 	</head>
 	<body>
@@ -21,20 +21,20 @@
 			</header>
 
 		<!-- Nav -->
-			<nav id="menu">
-				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-					<li><a class='dropdown-arrow'>Genshin Impact</a>
-						<ul class='sub-menus'>
-						  <li><a href="introduction.html">- Introduction</a></li>
-						  <li><a href="artifacts.html">- Artifacts</a></li>
-						  <li><a href="weapon.html">- Weapons</a></li>
-						  <li><a href="character.html">- Character</a></li>
-						</ul>
-					  </li>
-					<li><a href="elements.html">Contact</a></li>
-				</ul>
-			</nav>
+		<nav id="menu">
+			<ul class="links">
+				<li><a href="index.html">Home</a></li>
+				<li><a class='dropdown-arrow'>Genshin Impact</a>
+					<ul class='sub-menus'>
+					  <li><a href="introduction.html">- Introduction</a></li>
+					  <li><a href="artifacts.html">- Artifacts</a></li>
+					  <li><a href="weapon.html">- Weapons</a></li>
+					  <li><a href="character.html">- Character</a></li>
+					</ul>
+				  </li>
+				<li><a href="elements.html">Contact</a></li>
+			</ul>
+		</nav>
 
 		<!-- Banner -->
 			<section class="banner full">
@@ -43,7 +43,7 @@
 					<div class="inner">
 						<header>
 							<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
-							<h2 class="text-size">Welcome to </br>IceSakura Game Wiki</h2>
+							<h2 class="text-size">Introduction</h2>
 						</header>
 					</div>
 				</article>
@@ -53,7 +53,7 @@
 					<div class="inner">
 						<header>
 							<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
-							<h2>Welcome to </br>IceSakura Game Wiki</h2>
+							<h2>Introduction</h2>
 						</header>
 					</div>
 				</article>
@@ -63,7 +63,7 @@
 					<div class="inner">
 						<header>
 							<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
-							<h2>Welcome to </br>IceSakura Game Wiki</h2>
+							<h2>Introduction</h2>
 						</header>
 					</div>
 				</article>
@@ -73,7 +73,7 @@
 					<div class="inner">
 						<header>
 							<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
-							<h2>Welcome to </br>IceSakura Game Wiki</h2>
+							<h2>Introduction</h2>
 						</header>
 					</div>
 				</article>
@@ -83,7 +83,7 @@
 					<div class="inner">
 						<header>
 							<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
-							<h2>Welcome to </br>IceSakura Game Wiki</h2>
+							<h2>Introduction</h2>
 						</header>
 					</div>
 				</article>
@@ -93,7 +93,7 @@
 					<div class="inner">
 						<header>
 							<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
-							<h2>Welcome to </br>IceSakura Game Wiki</h2>
+							<h2>Introduction</h2>
 						</header>
 					</div>
 				</article>
@@ -102,7 +102,7 @@
 					<div class="inner">
 						<header>
 							<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
-							<h2>Welcome to </br>IceSakura Game Wiki</h2>
+							<h2>Introduction</h2>
 						</header>
 					</div>
 				</article>
@@ -111,7 +111,7 @@
 					<div class="inner">
 						<header>
 							<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
-							<h2 class="span">Welcome to </br>IceSakura Game Wiki</h2>
+							<h2 class="span">Introduction</h2>
 						</header>
 					</div>
 				</article>
@@ -121,7 +121,7 @@
 					<div class="inner">
 						<header>
 							<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
-							<h2>Welcome to </br>IceSakura Game Wiki</h2>
+							<h2>Introduction</h2>
 						</header>
 					</div>
 				</article>
@@ -132,7 +132,7 @@
 				<div class="inner">
 					<header>
 						<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
-						<h2>Welcome to </br>IceSakura Game Wiki</h2>
+						<h2>Introduction</h2>
 					</header>
 				</div>
 			</article>
@@ -143,27 +143,19 @@
 			<div class="inner">
 				<header>
 					<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
-					<h2>Welcome to </br>IceSakura Game Wiki</h2>
+					<h2>Introduction</h2>
 				</header>
 			</div>
 		</article>
 	</section>
 
-			<!-- Boton hacia arriba -->
-			<a class="ir-arriba"  javascript:void(0) title="Volver arriba">
-				<span class="fa-stack">
-				  <i class="fa fa-circle fa-stack-2x"></i>
-				  <i class="fa fa-arrow-up fa-stack-1x fa-inverse"></i>
-				</span>
-			  </a>
-
 		<!-- One -->
-			<section id="one" class="wrapper style2">
+			<!-- <section id="one" class="wrapper style2">
 				<header class="align-center">
 					<p class="special">IceSakura Game Wiki</p>
 					<h2 class="special2">Articles </h2>
-				</header>
-				<div class="inner">
+				</header> -->
+				<!-- <div class="inner">
 					<div class="grid-style">
 
 						<div>
@@ -292,7 +284,7 @@
 
 					</div>
 				</div>
-			</section>
+			</section> -->
 
 		<!-- Two -->
 			<!-- <section id="two" class="wrapper style3">
@@ -304,8 +296,60 @@
 				</div>
 			</section> -->
 
+
+		<!-- Boton hacia arriba -->
+		<a class="ir-arriba"  javascript:void(0) title="Volver arriba">
+			<span class="fa-stack">
+	 		 <i class="fa fa-circle fa-stack-2x"></i>
+	  		<i class="fa fa-arrow-up fa-stack-1x fa-inverse"></i>
+			</span>
+ 		 </a>
+
+			<!-- Two1 -->
+			<section id="two" class="wrapper style2">
+				<div class="inner">
+					<div class="box">
+						<div class="content">
+							<header class="align-center">
+								<p>maecenas sapien feugiat ex purus</p>
+								<h2>Lorem ipsum dolor</h2>
+							</header>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras at dignissim augue, in iaculis neque. Etiam bibendum felis ac vulputate pellentesque. Cras non blandit quam. Nunc porta, est non posuere sagittis, neque nunc pellentesque diam, a iaculis lacus urna vitae purus. In non dui vel est tempor faucibus. Aliquam erat volutpat. Quisque vel est vitae nibh laoreet auctor. In nec libero dui. Nulla ullamcorper, dolor nec accumsan viverra, libero eros rutrum metus, vel lacinia magna odio non nunc. Praesent semper felis eu rhoncus aliquam. Donec at quam ac libero vestibulum pretium. Nunc faucibus vel arcu in malesuada. Aenean at velit odio. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Maecenas commodo erat eget molestie sollicitudin. Donec imperdiet, ex sed blandit dictum, ipsum metus ultrices arcu, vitae euismod nisl sapien vitae tortor.</p>
+
+							<img class="image fit" src="images/genshin9.jpg"  alt="" /></br>
+
+							<p>Vivamus nec odio ac ligula congue feugiat at vitae leo. Aenean sem justo, finibus sed dui eu, accumsan facilisis dolor. Fusce quis dui eget odio iaculis aliquam vel sed velit. Nulla pellentesque posuere semper. Nulla eu sagittis lorem, a auctor nulla. Sed ac condimentum orci, ac varius ante. Nunc blandit quam sit amet sollicitudin sodales.</p>
+
+							<p>Vivamus ultricies mollis mauris quis molestie. Quisque eu mi velit. In et cursus nibh. Donec facilisis, orci sed mollis hendrerit, nunc risus mattis odio, eget efficitur nisl orci a lectus. Aenean finibus neque convallis orci sollicitudin tincidunt. Vivamus lacinia facilisis diam, quis facilisis nisi luctus nec. Aliquam ac molestie enim, ut ultrices elit. Fusce laoreet vulputate risus in tincidunt. Sed commodo mollis maximus. Nullam varius laoreet nibh sit amet facilisis. Donec ac odio vehicula, consequat elit et, sodales justo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nullam ac auctor mauris, in hendrerit libero. </p>
+						</div>
+					</div>
+				</div>
+			</section>
+
+
+			<!-- Two -->
+			<section id="two" class="wrapper style2">
+				<div class="inner">
+					<div class="box">
+						<div class="content">
+							<header class="align-center">
+								<p>maecenas sapien feugiat ex purus</p>
+								<h2>Lorem ipsum dolor</h2>
+							</header>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras at dignissim augue, in iaculis neque. Etiam bibendum felis ac vulputate pellentesque. Cras non blandit quam. Nunc porta, est non posuere sagittis, neque nunc pellentesque diam, a iaculis lacus urna vitae purus. In non dui vel est tempor faucibus. Aliquam erat volutpat. Quisque vel est vitae nibh laoreet auctor. In nec libero dui. Nulla ullamcorper, dolor nec accumsan viverra, libero eros rutrum metus, vel lacinia magna odio non nunc. Praesent semper felis eu rhoncus aliquam. Donec at quam ac libero vestibulum pretium. Nunc faucibus vel arcu in malesuada. Aenean at velit odio. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Maecenas commodo erat eget molestie sollicitudin. Donec imperdiet, ex sed blandit dictum, ipsum metus ultrices arcu, vitae euismod nisl sapien vitae tortor.</p>
+							
+							<img class="image fit" src="images/genshin9.jpg"  alt="" /></br>
+
+							<p>Vivamus nec odio ac ligula congue feugiat at vitae leo. Aenean sem justo, finibus sed dui eu, accumsan facilisis dolor. Fusce quis dui eget odio iaculis aliquam vel sed velit. Nulla pellentesque posuere semper. Nulla eu sagittis lorem, a auctor nulla. Sed ac condimentum orci, ac varius ante. Nunc blandit quam sit amet sollicitudin sodales.</p>
+
+							<p>Vivamus ultricies mollis mauris quis molestie. Quisque eu mi velit. In et cursus nibh. Donec facilisis, orci sed mollis hendrerit, nunc risus mattis odio, eget efficitur nisl orci a lectus. Aenean finibus neque convallis orci sollicitudin tincidunt. Vivamus lacinia facilisis diam, quis facilisis nisi luctus nec. Aliquam ac molestie enim, ut ultrices elit. Fusce laoreet vulputate risus in tincidunt. Sed commodo mollis maximus. Nullam varius laoreet nibh sit amet facilisis. Donec ac odio vehicula, consequat elit et, sodales justo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nullam ac auctor mauris, in hendrerit libero. </p>
+						</div>
+					</div>
+				</div>
+			</section>
+
 		<!-- Three -->
-			<section id="three" class="wrapper style2">
+			<!-- <section id="three" class="wrapper style2">
 				<div class="inner">
 					<header class="align-center">
 						<p class="special">IceSakura Game Wiki</p>
@@ -416,7 +460,7 @@
 						</div></a>
 					</div>
 				</div>
-			</section>
+			</section> -->
 
 
 		<!-- Footer -->
