--- a/contact.html
+++ b/contact.html
@@ -27,15 +27,14 @@
 				<li><a class='dropdown-arrow'>Genshin Impact</a>
 					<ul class='sub-menus'>
 					  <li><a href="introduction.html">- Introduction</a></li>
-					  <li><a href="character.html">- Character</a></li>
-					  <li><a href="weapon.html">- Weapons</a></li>
 					  <li><a href="artifacts.html">- Artifacts</a></li>
+					  <li><a href="weapon.html">- Weapons</a></li>
+					  <li><a href="character.html">- Character</a></li>
 					</ul>
 				  </li>
-				<li><a href="contact.html">Contact</a></li>
+				<li><a href="elements.html">Contact</a></li>
 			</ul>
 		</nav>
-
 
 		<!-- Banner -->
 			<section class="banner full">
@@ -44,7 +43,7 @@
 					<div class="inner">
 						<header>
 							<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
-							<h2 class="text-size">Introduction</h2>
+							<h2 class="text-size">Contact</h2>
 						</header>
 					</div>
 				</article>
@@ -54,7 +53,7 @@
 					<div class="inner">
 						<header>
 							<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
-							<h2>Introduction</h2>
+							<h2>Contact</h2>
 						</header>
 					</div>
 				</article>
@@ -64,7 +63,7 @@
 					<div class="inner">
 						<header>
 							<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
-							<h2>Introduction</h2>
+							<h2>Contact</h2>
 						</header>
 					</div>
 				</article>
@@ -74,7 +73,7 @@
 					<div class="inner">
 						<header>
 							<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
-							<h2>Introduction</h2>
+							<h2>Contact</h2>
 						</header>
 					</div>
 				</article>
@@ -84,7 +83,7 @@
 					<div class="inner">
 						<header>
 							<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
-							<h2>Introduction</h2>
+							<h2>Contact</h2>
 						</header>
 					</div>
 				</article>
@@ -94,7 +93,7 @@
 					<div class="inner">
 						<header>
 							<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
-							<h2>Introduction</h2>
+							<h2>Contact</h2>
 						</header>
 					</div>
 				</article>
@@ -103,7 +102,7 @@
 					<div class="inner">
 						<header>
 							<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
-							<h2>Introduction</h2>
+							<h2>Contact</h2>
 						</header>
 					</div>
 				</article>
@@ -112,7 +111,7 @@
 					<div class="inner">
 						<header>
 							<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
-							<h2 class="span">Introduction</h2>
+							<h2 class="span">Contact</h2>
 						</header>
 					</div>
 				</article>
@@ -122,7 +121,7 @@
 					<div class="inner">
 						<header>
 							<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
-							<h2>Introduction</h2>
+							<h2>Contact</h2>
 						</header>
 					</div>
 				</article>
@@ -133,7 +132,7 @@
 				<div class="inner">
 					<header>
 						<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
-						<h2>Introduction</h2>
+						<h2>Contact</h2>
 					</header>
 				</div>
 			</article>
@@ -144,7 +143,7 @@
 			<div class="inner">
 				<header>
 					<!-- <p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p> -->
-					<h2>Introduction</h2>
+					<h2>Contact</h2>
 				</header>
 			</div>
 		</article>
@@ -306,7 +305,7 @@
 			</span>
  		 </a>
 
-			<!-- Two -->
+			<!-- Two1 -->
 			<section id="two" class="wrapper style2">
 				<div class="inner">
 					<div class="box">
@@ -317,15 +316,53 @@
 							</header>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras at dignissim augue, in iaculis neque. Etiam bibendum felis ac vulputate pellentesque. Cras non blandit quam. Nunc porta, est non posuere sagittis, neque nunc pellentesque diam, a iaculis lacus urna vitae purus. In non dui vel est tempor faucibus. Aliquam erat volutpat. Quisque vel est vitae nibh laoreet auctor. In nec libero dui. Nulla ullamcorper, dolor nec accumsan viverra, libero eros rutrum metus, vel lacinia magna odio non nunc. Praesent semper felis eu rhoncus aliquam. Donec at quam ac libero vestibulum pretium. Nunc faucibus vel arcu in malesuada. Aenean at velit odio. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Maecenas commodo erat eget molestie sollicitudin. Donec imperdiet, ex sed blandit dictum, ipsum metus ultrices arcu, vitae euismod nisl sapien vitae tortor.</p>
 
-							<img class="image fit" src="images/genshin9.jpg"  alt="" /></br>
+							<p>Vivamus nec odio ac ligula congue feugiat at vitae leo. Aenean sem justo, finibus sed dui eu, accumsan facilisis dolor. Fusce quis dui eget odio iaculis aliquam vel sed velit. Nulla pellentesque posuere semper. Nulla eu sagittis lorem, a auctor nulla. Sed ac condimentum orci, ac varius ante. Nunc blandit quam sit amet sollicitudin sodales.</p> </br>
 
-							<p>Vivamus nec odio ac ligula congue feugiat at vitae leo. Aenean sem justo, finibus sed dui eu, accumsan facilisis dolor. Fusce quis dui eget odio iaculis aliquam vel sed velit. Nulla pellentesque posuere semper. Nulla eu sagittis lorem, a auctor nulla. Sed ac condimentum orci, ac varius ante. Nunc blandit quam sit amet sollicitudin sodales.</p>
+							<!-- Form -->
 
-							<p>Vivamus ultricies mollis mauris quis molestie. Quisque eu mi velit. In et cursus nibh. Donec facilisis, orci sed mollis hendrerit, nunc risus mattis odio, eget efficitur nisl orci a lectus. Aenean finibus neque convallis orci sollicitudin tincidunt. Vivamus lacinia facilisis diam, quis facilisis nisi luctus nec. Aliquam ac molestie enim, ut ultrices elit. Fusce laoreet vulputate risus in tincidunt. Sed commodo mollis maximus. Nullam varius laoreet nibh sit amet facilisis. Donec ac odio vehicula, consequat elit et, sodales justo. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nullam ac auctor mauris, in hendrerit libero. </p>
+							<form method="post" action="https://formspree.io/f/xpzkaalj" id="my-form">
+								<div class="row uniform">
+									<div class="6u 12u$(xsmall)">
+										<input type="text" name="name" id="name" value="" placeholder="Name" />
+									</div>
+									<div class="6u$ 12u$(xsmall)">
+										<input type="email" name="email" id="email" value="" placeholder="Email" />
+									</div>
+									<!-- Break -->
+									<div class="12u$">
+										<div class="select-wrapper">
+											<select name="category" id="category">
+												<option value="">- Category -</option>
+												<option value="test">1- Test</option>
+												<option value="Suggestion">2- Suggestion</option>
+											</select>
+										</div>
+									</div>
+
+									<!-- Break -->
+									<div class="12u$">
+										<textarea name="message" id="message" placeholder="Enter your message" rows="6"></textarea>
+									</div>
+									<!-- Break -->
+									<div class="12u$">
+										<ul class="actions">
+											<li><input type="submit" value="Send Message" /></li>
+											<li><input type="reset" value="Reset" class="alt" /></li>
+										</ul>
+									</div>
+								</div>
+
+								<div id="status"></div>
+
+							</form>
+
+
 						</div>
 					</div>
 				</div>
 			</section>
+
+
 
 		<!-- Three -->
 			<!-- <section id="three" class="wrapper style2">
@@ -468,5 +505,6 @@
 			<script src="assets/js/main.js"></script>
 			<script src="assets/js/munu.js"></script>
 			<script src="assets/js/botom.js"></script>
+			<script src="assets/js/email.js"></script>
 	</body>
 </html>
