--- a/index.html
+++ b/index.html
@@ -27,12 +27,15 @@
 					<li><a class='dropdown-arrow'>Genshin Impact</a>
 						<ul class='sub-menus'>
 						  <li><a href="introduction.html">- Introduction</a></li>
-						  <li><a href="artifacts.html">- Artifacts</a></li>
+						  <li><a href="character.html" class='dropdown-arrow'>- Character</a></li>
+						  <ul class='sub-menus'>
+							  <li><a href="#"> - Anemo Character</a></li>
+						  </ul>
 						  <li><a href="weapon.html">- Weapons</a></li>
-						  <li><a href="character.html">- Character</a></li>
+						  <li><a href="artifacts.html">- Artifacts</a></li>
 						</ul>
 					  </li>
-					<li><a href="elements.html">Contact</a></li>
+					<li><a href="contact.html">Contact</a></li>
 				</ul>
 			</nav>
 
